force-app/main/default/objects/PI_Scenario__c/PI_Scenario__c.object-meta.xml
<CustomObject>
    <label>PI Scenario</label>
    <nameField>
        <label>PI Scenario</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PI Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>