force-app/main/default/objects/PI_Scenario__c/fields/COAuthCancelExtAmount__c.field-meta.xml
<CustomField>
    <fullName>COAuthCancelExtAmount__c</fullName>
    <label>Change Order Auth Cancel Extended Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>