force-app/main/default/objects/PI_Scenario__c/fields/COOrderedValue__c.field-meta.xml
<CustomField>
    <fullName>COOrderedValue__c</fullName>
    <label>CO Ordered Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>