force-app/main/default/objects/PI_Scenario__c/fields/FxAuthorizedTOMV__c.field-meta.xml
<CustomField>
    <fullName>FxAuthorizedTOMV__c</fullName>
    <label>FxAuthorizedTOMV</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>