force-app/main/default/objects/PI_Scenario__c/fields/isPrimary__c.field-meta.xml
<CustomField>
    <fullName>isPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPrimary</label>
    <type>Checkbox</type>
</CustomField>