force-app/main/default/objects/PI_Scenario__c/fields/isUnviewable__c.field-meta.xml
<CustomField>
    <fullName>isUnviewable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUnviewable</label>
    <type>Checkbox</type>
</CustomField>