force-app/main/default/objects/PI_Scenario__c/fields/JobPriceFactor__c.field-meta.xml
<CustomField>
    <fullName>JobPriceFactor__c</fullName>
    <label>Job Price Factor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>