force-app/main/default/objects/PI_Scenario__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <label>LastModifiedDate</label>
    <type>Date</type>
</CustomField>