force-app/main/default/objects/PI_Scenario__c/fields/Quote_Cur_TotalFloor_c__c.field-meta.xml
<CustomField>
    <fullName>Quote_Cur_TotalFloor_c__c</fullName>
    <label>Quote_Cur_TotalFloor__c</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>