force-app/main/default/objects/PI_Scenario__c/fields/Quote_Num_Score__c.field-meta.xml
<CustomField>
    <fullName>Quote_Num_Score__c</fullName>
    <label>Quote_Num_Score</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>