force-app/main/default/objects/PI_Scenario__c/fields/Quote_prc_CCOgmPct_c__c.field-meta.xml
<CustomField>
    <fullName>Quote_prc_CCOgmPct_c__c</fullName>
    <label>Quote_prc_CCOgm</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>