force-app/main/default/objects/PI_Scenario__c/fields/Quote_Prc_MinTA__c.field-meta.xml
<CustomField>
    <fullName>Quote_Prc_MinTA__c</fullName>
    <label>Quote Prc MinTA</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>