force-app/main/default/objects/PI_Scenario__c/fields/Quote_prc_TotalTargetAttain__c.field-meta.xml
<CustomField>
    <fullName>Quote_prc_TotalTargetAttain__c</fullName>
    <label>Quote prc TotalTargetAttain</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>