force-app/main/default/objects/PI_Scenario__c/fields/Quote_Str_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Str_Status__c</fullName>
    <label>Quote_Str_Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>