force-app/main/default/objects/PI_Scenario__c/fields/QuoteCurChangedAuthorizedPrice__c.field-meta.xml
<CustomField>
    <fullName>QuoteCurChangedAuthorizedPrice__c</fullName>
    <label>Quote Cur Changed Authorized Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>