force-app/main/default/objects/PI_Scenario__c/fields/QuoteCurChangedTotalCost__c.field-meta.xml
<CustomField>
    <fullName>QuoteCurChangedTotalCost__c</fullName>
    <label>Quote Cur Changed Total Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>