force-app/main/default/objects/PI_Scenario__c/fields/QuoteCurTotalCost__c.field-meta.xml
<CustomField>
    <fullName>QuoteCurTotalCost__c</fullName>
    <label>Quote Cur Total Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>