force-app/main/default/objects/PI_Scenario__c/fields/QuoteExpertCalc__c.field-meta.xml
<CustomField>
    <fullName>QuoteExpertCalc__c</fullName>
    <label>Quote Expert Calc</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>