force-app/main/default/objects/PI_Scenario__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuoteId</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>PI Scenarios</relationshipLabel>
    <relationshipName>PI_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>