force-app/main/default/objects/PI_Scenario__c/fields/QuotePseCalc__c.field-meta.xml
<CustomField>
    <fullName>QuotePseCalc__c</fullName>
    <label>Quote Pse Calc</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>