force-app/main/default/objects/PI_Scenario__c/fields/QuoteReauthCalc__c.field-meta.xml
<CustomField>
    <fullName>QuoteReauthCalc__c</fullName>
    <label>Quote Reauth Calc</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>