force-app/main/default/objects/PI_Scenario__c/fields/QuoteTargetCalc__c.field-meta.xml
<CustomField>
    <fullName>QuoteTargetCalc__c</fullName>
    <label>Quote Target Calc</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>