force-app/main/default/objects/PI_Scenario__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Id__c</columns>
    <columns>IsDeleted__c</columns>
    <columns>Name__c</columns>
    <columns>CurrencyIsoCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>